# rust_mdns_rest_client

./: Cargo.toml
rust_mdns_rest_client/: Cargo.toml  RustmDNSRESTClient.code-workspace
rust_mdns_rest_client/.cargo/: config.toml
rust_mdns_rest_client/config/: config.json
rust_mdns_rest_client/src/: main.rs
rust_mdns_rest_client/src/includes/m_dnsquery/: mod.rs
rust_mdns_rest_client/src/includes/rest_client/: mod.rs
rust_mdns_rest_client/src/modules/m_dnsquery/: mod.rs
rust_mdns_rest_client/src/modules/rest_client/: mod.rs
src/: main.rs
src/.cargo/: config.toml
src/includes/: mod.rs
src/includes/m_dnsquery/: mod.rs
