[package]
name = "rust_mdns_rest_client"
version = "0.1.0"
edition = "2021"
description = "A REST client for with mDNS discovery"
authors = ["DaOfficialWizard"]
license = "MIT"
# rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.26.4"
sprintf = "0.1.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
async-zeroconf = "0.2.2"
futures-util = "0.3.25"
futures-core = "0.3.25"
futures = "0.3.25"
libc = "0.2.137"
bonjour-sys = "0.1.0"
# async-std = "1.12.0"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Automatically strip symbols from the binary.